# FlipHawk-site

./: .env.example  DEPLOYMENT.md  Dockerfile  README.md  __init__.py  amazon_scraper.py  analytics.py  api_integration.py  app.py  arbitrage bot test.py  arbitrage_api.py  arbitrage_bot.py  arbitrage_coordinator.py  auth.py  comprehensive_keywords.py  directory_structure.sh  docker-compose.yml  ebay_scraper.py  etsy_scraper.py  facebook_scraper.py  filters.py  goat_scraper.py  index.html  integration_test  manifest.json  marketplace_bridge.py  marketplace_scanner.py  mercari_scraper.py  models.py  nginx.conf  offerup_scraper.py  render.yaml  requirements.txt  risk_assessment.py  run.py  scan.html  scraper_manager.py  script.js  setup.py  stockx_scraper.py  (+5 more)
.github/: ci-cd.yml
FlipHawk-Site/: App.py  Arbitrage_bot.py
FlipHawk-Site/Arbitrage_bot/: Arbitrage_bot.py.py
FlipHawk-Site/static/: index.html
FlipHawk-site/: Dockerfile  app.py  pyproject.toml  requirements.txt
monitoring/: prometheus.yml
nginx/: nginx.conf
static/js/: connector.js  scan.js  script.js
tests/: icons  test_app.py
