[tool.poetry]
name = "fliphawk-site"
version = "0.1.0"
description = "FlipHawk website"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# Add your actual dependencies below
# For example:
# flask = "^2.0.1"
# django = "^4.2.0"

[tool.poetry.dev-dependencies]
# Development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
